feat(backend): :sparkles: Added plant deletion
